Revamp and make reusable how we handle host and target architectures. Also completely rewrites javafx.sml.

--- a/ant/project.properties
+++ b/ant/project.properties
@@ -32,21 +32,17 @@ javac.source=1.8
 javac.target=1.8
 java.download=https://adoptopenjdk.net/?variant=openjdk11
 
-# Default to Java's architecture
-target.arch=${os.arch}
-
 # Skip bundling the java runtime
 # jre.skip=true
 
-# JavaFX x86_64
-javafx.x86_64.version=15.ea+3_monocle
-javafx.x86_64.mirror=https://download2.gluonhq.com/openjfx/15
-javafx.x86_64.arch=x64
+# JavaFX 15.ea+3 is only available for x86_64
+javafx.version=15.ea+3_monocle
+javafx.arch=x86_64
+javafx.mirror=https://download2.gluonhq.com/openjfx
 
-# JavaFX ARM64
-javafx.aarch64.version=17-ea+9_monocle
-javafx.aarch64.mirror=https://download2.gluonhq.com/openjfx/17
-javafx.aarch64.arch=aarch64
+# JavaFX 17 has bugs, but we have no choice on other platforms
+javafx.unstable.version=17-ea+9_monocle
+javafx.unstable.mirror=https://download2.gluonhq.com/openjfx/17
 
 # Mask tray toggle (Apple only)
 java.mask.tray=true
