--- a/ant/apple/appdmg.json.in
+++ b/ant/apple/appdmg.json.in
@@ -1,9 +1,10 @@
 {
   "title": "${project.name}",
   "background": "${basedir}/ant/apple/dmg-background.png",
+  "icon-size": 128,
   "contents": [
-    { "x": 407, "y": 244, "type": "link", "path": "/Applications" },
-    { "x": 133, "y": 244, "type": "file", "path": "${build.dir}/${project.name}.app" }
+    { "x": 501, "y": 154, "type": "link", "path": "/Applications" },
+    { "x": 179, "y": 154, "type": "file", "path": "${build.dir}/${project.name}.app" }
   ],
   "code-sign": {
     "signing-identity" : "${codesign.activeid}"
