--- a/ant/windows/windows-launcher.nsi.in
+++ b/ant/windows/windows-launcher.nsi.in
@@ -66,7 +66,14 @@ Section
         StrCpy $command '"$R2" /s /k "$command"'
     ${EndIf}
 
-    Exec $command
+    ; Check for "--wait" parameter
+    ${StrLoc} $R3 "$params" "--wait" "<"
+    ${If} $R3 != ""
+        ExecWait $command
+    ${Else}
+        Exec $command
+    ${EndIf}
+
     ${If} ${RunningX64}
         ${EnableX64FSRedirection}
     ${EndIf}
