Add bundled Java runtime (#770)
* Initial jlink support for aarch64 cross, multiple jdk providers
* Adds JLink helper class, CLI support
* Pre-extract all native libs (JNA, HID4Java, etc)
* Adds new branding to Windows, MacOS installers
* Adds high-contrast support for Windows installer
* Refactor main(); untangles TrayManager and PrintSocketServer
* Move various utilities to JNA with fallback: focus, hostname, whoami, theme detection
* Leverage JDK9+ for browsing directories
* Use absolute paths for shell execute when possible
* Renames `altPrinting` to `forceRaw`, moves code to JNA using RSS with fallback
* Mimic javapackager structure for macOS
* Adds experimental DMG creation support for macOS

Co-authored-by: Vzor- <kyle@berezin.com>
Co-authored-by: Berenz <thebrettberenz@gmail.com>
Co-authored-by: Rebecca <rebeccadefield@gmail.com>
Co-authored-by: Lite Finocchiaro <lite.m.finocchiaro@gmail.com>

--- a/ant/windows/windows-installer.nsi.in
+++ b/ant/windows/windows-installer.nsi.in
@@ -1,3 +1,5 @@
+!define MUI_BGCOLOR "SYSCLR:Window"
+!define MUI_TEXTCOLOR "SYSCLR:WindowText"
 !include MUI2.nsh
 !include x64.nsh
 !include LogicLib.nsh
@@ -72,18 +74,22 @@ Section
       System::Call 'Kernel32::SetEnvironmentVariable(t, t)i ("${vendor.name}_silent", "1").r0'
     ${EndIf}
 
-    ; Set the $java variable
-    TryAgain:
-    Call FindJava
-    !insertmacro VerifyJava "TryAgain"
-
+    ; Echo final destination to logs
     SetOutPath $INSTDIR
 
-    ; Run preinstall tasks
-    SetOutPath "$PluginsDir\tmp"
+    ; Copy files to a temporary location
+    SetOutPath "$PLUGINSDIR\payload"
     DetailPrint "Extracting..."
     SetDetailsPrint none ; Temporarily suppress details
     File /r "${dist.dir}\*"
+
+    ; Set the $java variable
+    TryAgain:
+    Push "$OUTDIR"
+    Call FindJava
+    !insertmacro VerifyJava "TryAgain"
+
+    ; Run preinstall tasks
     SetDetailsPrint both
     !insertmacro QzInstaller "preinstall" "" ""
 
