--- a/ant/windows/windows-launcher.nsi.in
+++ b/ant/windows/windows-launcher.nsi.in
@@ -40,6 +40,7 @@ Section
     ${GetParameters} $params
 
     ; Sets the $java variable
+    Push "$EXEDIR"
     Call FindJava
 
     Var /GLOBAL opts
