--- a/ant/windows/windows-uninstaller.nsi.in
+++ b/ant/windows/windows-uninstaller.nsi.in
@@ -1,3 +1,5 @@
+!define MUI_BGCOLOR "SYSCLR:Window"
+!define MUI_TEXTCOLOR "SYSCLR:WindowText"
 !include MUI2.nsh
 !include x64.nsh
 !include LogicLib.nsh
@@ -64,6 +66,7 @@ Section
     ${EndIf}
 
     ; Set $javaw variable
+    Push "$DELETE_DIR"
     Call FindJava
 
     ; Run uninstall step using jar
