--- a/build.xml
+++ b/build.xml
@@ -2,33 +2,30 @@
 
 <project name="qz" default="distribute" basedir=".">
     <property file="ant/project.properties"/>
+    <import file="ant/platform-detect.xml"/>
     <import file="ant/javafx.xml"/>
     <import file="ant/signing.xml"/>
     <import file="ant/apple/installer.xml"/>
     <import file="ant/linux/installer.xml"/>
     <import file="ant/windows/installer.xml"/>
 
-    <target name="distribute" depends="init,clean,download-javafx,build-jar,override-authcert,include-assets,whitelist-certs">
-        <antcall target="tidy-javafx-dist"/>
+    <!-- Fixes some odd empty directory issues -->
+    <defaultexcludes remove="**/.DS_Store"/>
+
+    <target name="distribute" depends="init,quick-clean,build-jar,override-authcert,include-assets,whitelist-certs">
         <echo level="info">Process complete</echo>
     </target>
 
     <target name="init">
         <condition property="codesign.windows" value="true">
             <and>
-                <isset property="target.platform.windows"/>
+                <isset property="target.os.windows"/>
                 <isset property="signing.tsaurl"/>
             </and>
         </condition>
         <condition property="codesign.linux" value="true">
             <and>
-                <isset property="target.platform.linux"/>
-                <isset property="signing.tsaurl"/>
-            </and>
-        </condition>
-        <condition property="codesign.mac" value="true">
-            <and>
-                <isset property="target.platform.mac"/>
+                <isset property="target.os.linux"/>
                 <isset property="signing.tsaurl"/>
             </and>
         </condition>
@@ -37,7 +34,18 @@
     </target>
 
     <target name="clean" depends="init">
-        <delete dir="${out.dir}"/>
+        <delete dir="${out.dir}" includeemptydirs="true" defaultexcludes="false"/>
+    </target>
+
+    <target name="quick-clean">
+        <!-- Cleanup lingering files (for other OS installers) -->
+        <delete includeemptydirs="true" defaultexcludes="false" failonerror="false">
+            <fileset dir="${out.dir}">
+                <include name="**/**"/>
+                <exclude name="**/jlink/**"/>
+                <exclude name="**/javafx-*/**"/>
+            </fileset>
+        </delete>
     </target>
 
     <target name="compile-socket" depends="init">
@@ -56,7 +64,7 @@
         <javac destdir="${build.dir}/${project.filename}" source="${javac.source}" target="${javac.target}" includeantruntime="false" encoding="UTF-8">
             <src path="${src.dir}"/>
             <classpath>
-                <!-- prefer bouncycastle from pdfbox over simplersa -->
+                <!-- prefer bouncycastle from pdfbox over others -->
                 <path id="plugin.override">
                     <pathelement path="${pdfbox.path}"/>
                 </path>
@@ -80,30 +88,80 @@
         </copy>
     </target>
 
-    <target name="build-jar" depends="compile-socket">
-        <!-- Apple: Extract, sign, repackage all nested native libs for notarization -->
-        <antcall target="apple-installer.codesign-jars"/>
+    <target name="build-jar" depends="download-javafx,compile-socket,copy-libs,externalize-libs">
+        <echo level="info">Building jar</echo>
 
-        <echo level="info">Building Jar for Socket use</echo>
-        <mkdir dir="${sign.lib.dir}"/>
+        <!-- Strip jlink-incompat files -->
+        <echo level="info">Stripping jlink-incompatible files</echo>
         <jar compress="${jar.compress}" index="${jar.index}" destfile="${dist.dir}/${project.filename}.jar" duplicate="preserve">
             <fileset dir="${build.dir}/${project.filename}"/>
-            <zipgroupfileset dir="${sign.lib.dir}" includes="**/*.jar" erroronmissingdir="false"/>
-            <zipgroupfileset dir="lib">
-                <include name="**/*.jar"/>
-                <exclude name="**/jfxrt.jar"/>
-                <exclude name="**/jssc-*.jar" if="codesign.mac"/>
-            </zipgroupfileset>
+            <!-- Some root level files will cause jlink to fail, they need to be cleaned up -->
+            <fileset dir="${out.dir}/libs-temp" excludes="*.class,LICENSE,jetty-dir.css"/>
             <manifest>
                 <attribute name="Application-Name" value="${project.name}"/>
-                <attribute name="Main-Class" value="qz.ws.PrintSocketServer"/>
+                <attribute name="Main-Class" value="qz.App"/>
                 <attribute name="Permissions" value="all-permissions"/>
             </manifest>
         </jar>
+        <delete dir="${out.dir}/libs-temp" includeemptydirs="true" defaultexcludes="false"/>
+    </target>
 
-        <antcall target="sign-jar">
-            <param name="sign.jar.file" value="${dist.dir}/${project.filename}.jar"/>
-        </antcall>
+    <target name="externalize-libs" if="separate.static.libs" depends="copy-dylibs,copy-dlls,copy-solibs">
+        <!-- Strip embedded, native resources -->
+        <delete>
+            <fileset dir="${out.dir}/libs-temp">
+                <include name="**/*.jnilib"/>
+                <include name="**/*.dylib"/>
+                <include name="**/*.dll"/>
+                <include name="**/*.so"/>
+                <include name="**/*.a"/>
+            </fileset>
+        </delete>
+
+        <!-- Delete empty files-->
+        <delete includeemptydirs="true" defaultexcludes="false">
+            <fileset dir="${out.dir}/libs-temp">
+                <and>
+                    <size value="0"/>
+                    <type type="dir"/>
+                </and>
+            </fileset>
+        </delete>
+    </target>
+
+    <target name="copy-libs" depends="download-javafx">
+        <!-- Copy jfx libs-->
+        <mkdir dir="${dist.dir}/libs"/>
+        <copy todir="${dist.dir}/libs" flatten="true">
+            <fileset dir="${target.fx.dir}">
+                <include name="**/*.${target.libext}"/>
+            </fileset>
+        </copy>
+
+        <!-- Copy platform independent third-party libs -->
+        <mkdir dir="${out.dir}/libs-temp"/>
+        <unzip dest="${out.dir}/libs-temp" overwrite="false">
+            <fileset dir="${basedir}/lib">
+                <include name="**/*.jar"/>
+                <exclude name="**/javafx*"/>
+            </fileset>
+        </unzip>
+        <!-- Copy platform specific target javafx version -->
+        <echo level="info">Copying ${target.fx.dir}</echo>
+        <unzip dest="${out.dir}/libs-temp" overwrite="false">
+            <fileset dir="${target.fx.dir}">
+                <include name="**/*.jar"/>
+            </fileset>
+        </unzip>
+        <!-- Remove files that can/did collide during unpacking -->
+        <delete includeemptydirs="true" failonerror="false">
+            <fileset dir="${out.dir}/libs-temp">
+                <include name="**/META-INF/**"/>
+                <exclude name="**/META-INF/maven/**"/>
+                <include name="LICENSE*"/>
+                <include name="README*"/>
+            </fileset>
+        </delete>
     </target>
 
     <!-- install override.crt for "community" branded builds -->
@@ -139,7 +197,29 @@
         </copy>
     </target>
 
-    <target name="nsis" depends="nsis-preflight,distribute,build-exe"/>
-    <target name="pkgbuild" depends="pkgbuild-preflight,distribute,build-pkg"/>
-    <target name="makeself" depends="makeself-preflight,distribute,build-run"/>
+    <target name="download-jre" unless="jre.skip">
+        <condition property="target.os" value="windows">
+            <isset property="target.os.windows"/>
+        </condition>
+        <condition property="target.os" value="mac">
+            <isset property="target.os.mac"/>
+        </condition>
+        <property description="target.os default" name="target.os" value="linux"/>
+
+        <echo level="info">Downloading and bundling the jre for ${target.os}</echo>
+        <java jar="${dist.dir}/${project.filename}.jar" fork="true" failonerror="true">
+            <arg value="jlink"/>
+            <arg value="--platform"/>
+            <arg value="${target.os}"/>
+            <arg value="--arch"/>
+            <arg value="${target.arch}"/>
+        </java>
+    </target>
+
+    <target name="nsis" depends="get-target-arch,target-os-windows,distribute,download-jre,build-exe"/>
+    <target name="pkgbuild" depends="get-target-arch,target-os-mac,distribute,download-jre,build-pkg"/>
+    <target name="dmg" depends="get-target-arch,target-os-mac,distribute,download-jre,build-dmg"/>
+    <target name="makeself" depends="get-target-arch,target-os-linux,distribute,download-jre,build-run"/>
+
+
 </project>
