Enable multi-release jar file to fix missing logs

--- a/build.xml
+++ b/build.xml
@@ -101,6 +101,7 @@
                 <attribute name="Application-Name" value="${project.name}"/>
                 <attribute name="Main-Class" value="qz.App"/>
                 <attribute name="Permissions" value="all-permissions"/>
+                <attribute name="Multi-Release" value="true"/>
             </manifest>
         </jar>
         <delete dir="${out.dir}/libs-temp" includeemptydirs="true" defaultexcludes="false"/>
