Linux: Better handling of bundled java with mismatched architecture.

--- a/ant/linux/linux-installer.sh.in
+++ b/ant/linux/linux-installer.sh.in
@@ -40,6 +40,9 @@ run_task () {
     fi
 }
 
+# Ensure java is installed and working before starting
+"./${project.filename}" --version
+
 # Make a temporary jar for preliminary installation steps
 run_task preinstall
 
