--- a/ant/unix/unix-launcher.sh.in
+++ b/ant/unix/unix-launcher.sh.in
@@ -84,8 +84,8 @@ fi
 
 # Verify the bundled Java version actually works
 if test -f "$DIR/runtime/bin/java" ; then
-    echo "Verifying the bundled Java version  can run on this platform..."
-    if "$DIR/runtime/bin/java" -version  2>&1 > /dev/null ; then
+    echo "Verifying the bundled Java version can run on this platform..."
+    if "$DIR/runtime/bin/java" -version &> /dev/null ; then
         echo -e "$SUCCESS Bundled Java version is OK"
     else
         echo -e "$FAILURE Sorry, the bundled Java version won't run on this platform."
