Fix Java download URL

--- a/ant/project.properties
+++ b/ant/project.properties
@@ -30,7 +30,7 @@ separate.static.libs=true
 # See also qz.common.Constants.java
 javac.source=1.8
 javac.target=1.8
-java.download=https://adoptium.net/?variant=openjdk11&jvmVariant=hotspot
+java.download=https://bell-sw.com/pages/downloads/#/java-11-lts
 
 # Skip bundling the java runtime
 # jre.skip=true
