Start moving properties to ant (not yet working)

--- a/ant/project.properties
+++ b/ant/project.properties
@@ -32,6 +32,16 @@ javac.source=1.8
 javac.target=1.8
 java.download=https://bell-sw.com/pages/downloads/#/java-11-lts
 
+# JLink FIXME THESE ARE UNUSED
+# Java vendor to bundle into software (e.g. "*BellSoft|Adoptium|Microsoft")
+jlink.java.vendor="BellSoft"
+# Java vendor to bundle into software (e.g. "11.0.17+7")
+jlink.java.version="11.0.17+7"
+# Java garbage collector flavor to use (e.g. "hotspot|openj9")
+jlink.java.gc="hotspot"
+# Java garbage collector version to use (openj9 only, e.g. "0.35.0")
+jlink.java.gc.version="0.35.0"
+
 # Skip bundling the java runtime
 # jre.skip=true
 
