--- a/ant/project.properties
+++ b/ant/project.properties
@@ -32,8 +32,7 @@ javac.source=1.8
 javac.target=1.8
 java.download=https://bell-sw.com/pages/downloads/#/java-11-lts
 
-# JLink FIXME THESE ARE UNUSED
-# Java vendor to bundle into software (e.g. "*BellSoft|Adoptium|Microsoft")
+# Java vendor to bundle into software (e.g. "*BellSoft|Adoptium|Microsoft|Amazon|IBM")
 jlink.java.vendor="BellSoft"
 # Java vendor to bundle into software (e.g. "11.0.17+7")
 jlink.java.version="11.0.17+7"
