--- a/ant/project.properties
+++ b/ant/project.properties
@@ -36,7 +36,7 @@ java.download=https://bell-sw.com/pages/downloads/#/java-11-lts
 # jre.skip=true
 
 # JavaFX version
-javafx.version=18-ea+1_monocle
+javafx.version=19_monocle
 javafx.mirror=https://download2.gluonhq.com/openjfx
 
 # Mask tray toggle (Apple only)
