--- a/ant/project.properties
+++ b/ant/project.properties
@@ -35,14 +35,9 @@ java.download=https://bell-sw.com/pages/downloads/#/java-11-lts
 # Skip bundling the java runtime
 # jre.skip=true
 
-# JavaFX 15.ea+3 is only available for x86_64
-javafx.version=15.ea+3_monocle
-javafx.arch=x86_64
+# JavaFX version
+javafx.version=19_monocle
 javafx.mirror=https://download2.gluonhq.com/openjfx
-
-# JavaFX 17 has bugs, but we have no choice on other platforms
-javafx.unstable.version=17-ea+9_monocle
-javafx.unstable.mirror=https://download2.gluonhq.com/openjfx/17
 
 # Mask tray toggle (Apple only)
 java.mask.tray=true
