--- a/ant/project.properties
+++ b/ant/project.properties
@@ -38,8 +38,8 @@ jlink.java.vendor="BellSoft"
 jlink.java.version="11.0.17+7"
 # Java garbage collector flavor to use (e.g. "hotspot|openj9")
 jlink.java.gc="hotspot"
-# Java garbage collector version to use (openj9 only, e.g. "0.35.0")
-jlink.java.gc.version="0.35.0"
+# Java garbage collector version to use (e.g. openj9: "0.35.0", zulu: "11.62.17")
+jlink.java.gc.version="gc-ver-is-empty"
 
 # Skip bundling the java runtime
 # jre.skip=true
