Move jlink parameters into project.properties  (#1062)
* Overhaul JLink
* Add Semeru support
* Add Microsoft JDK support
* Add Amazon support,
* Add Zulu support
* Mac: Fix Java.runtime bundle version
* Update CLI documentation

--- a/ant/project.properties
+++ b/ant/project.properties
@@ -32,6 +32,15 @@ javac.source=1.8
 javac.target=1.8
 java.download=https://bell-sw.com/pages/downloads/#/java-11-lts
 
+# Java vendor to bundle into software (e.g. "*BellSoft|Adoptium|Microsoft|Amazon|IBM")
+jlink.java.vendor="BellSoft"
+# Java vendor to bundle into software (e.g. "11.0.17+7")
+jlink.java.version="11.0.17+7"
+# Java garbage collector flavor to use (e.g. "hotspot|openj9")
+jlink.java.gc="hotspot"
+# Java garbage collector version to use (e.g. openj9: "0.35.0", zulu: "11.62.17")
+jlink.java.gc.version="gc-ver-is-empty"
+
 # Skip bundling the java runtime
 # jre.skip=true
 
