Provide ability to specify a local, custom Java build

--- a/ant/project.properties
+++ b/ant/project.properties
@@ -40,6 +40,8 @@ jlink.java.version="11.0.17+7"
 jlink.java.gc="hotspot"
 # Java garbage collector version to use (e.g. openj9: "0.35.0", zulu: "11.62.17")
 jlink.java.gc.version="gc-ver-is-empty"
+# Bundle a locally built copy of Java instead
+# jlink.java.target=/path/to/custom/jdk-x.x.x
 
 # Skip bundling the java runtime
 # jre.skip=true
