--- a/ant/project.properties
+++ b/ant/project.properties
@@ -9,6 +9,7 @@ project.datadir=qz
 
 install.opts=-Djna.nosys=true
 launch.opts=-Xms512m ${install.opts}
+install.log=/tmp/${project.datadir}-install.log
 # jdk9+ flags
 # - Dark theme requires workaround https://github.com/bobbylight/Darcula/issues/8
 launch.jigsaw=--add-exports java.desktop/sun.swing=ALL-UNNAMED
